# just-submodules-hub

./: .octocov.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  _typos.toml  justfile  lefthook.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  happy-commit.yml  octocov.yml  python-test.yml  spellcheck.yml
docs/: README.md  command-naming.md
docs/github/: README.md  branch-protection.md  issues.md  merge-policy.md  prs.md  repos.md
docs/repo/: README.md  branches.md  catalog.md  hooks.md  linked-worktrees.md  open.md  submodule.md  worktrees.md
just/: github.just  index.just  inventory.just  openers.just  repo.just
just/github/: branch-protection.just  index.just  issues.just  merge-policy.just  prs.just  repos.just
just/github/branch-protection/: all.just  classic.just  legacy.just  ruleset.just
just/github/branch-protection/all/: classic.just  rulesets.just
just/github/issues/: summaries.just
just/github/merge-policy/: merge-commit.just  rebase.just  squash.just
just/github/merge-policy/merge-commit/: all.just
just/github/merge-policy/rebase/: all.just
just/github/merge-policy/squash/: all.just
just/github/prs/: summaries.just
just/github/repos/: owner.just  private.just  public.just
just/repo/: branches.just  catalog.just  index.just  linked-worktrees.just  open.just  submodule.just  worktrees.just
just/repo/catalog/: duplicates.just  languages.just
just/repo/catalog/duplicates/: filenames.just
just/repo/catalog/languages/: go.just  js.just  python.just  rust.just
just/repo/linked-worktrees/: hooks.just  sync.just
just/repo/open/: tools.just
just/repo/open/tools/: claude.just  codex.just  iterm2.just  vscode.just
just/repo/submodule/: branches.just  default-branch.just  hooks.just  managed.just  pointers.just  root-status.just  unmanaged.just  worktree.just  worktrees.just
just/repo/worktrees/: branches.just
scripts/github/: default-branch-baseline-bulk.sh  default-branch-ruleset.sh  default_branch_baseline_bulk.py  default_branch_ruleset.py  list-action-required-prs.sh  list-managed-issues.sh  list-managed-prs.sh  list-operator-required-prs.sh  list-ready-prs.sh  list_managed_issues.py  list_managed_prs.py  list_ready_prs.py  repository-merge-policy.sh  repository_merge_policy.py
scripts/repo/: apply_linked_worktree_sync.py  cleanup_merged_branches.py  linked_worktree_safety.py  list_linked_worktrees.py  open-repo.sh  open_repo.py  plan_linked_worktree_sync.py  reconcile_submodule_worktrees.py  resolve_repo.py  run-action.sh  run-with-hooks.sh  run_submodule_command.py  sync-default-branch.sh  sync_default_branch.py
scripts/submodules/: list-by-file.sh  list-duplicate-filenames.sh  list_by_file.py
src/just_submodules_hub/: __init__.py  branch_cleanup.py  default_branch.py  default_heads.py  github_cli.py  github_issues.py  github_merge_policy.py  github_prs.py  github_rulesets.py  gitmodules.py  linked_worktree_apply.py  linked_worktree_inventory.py  linked_worktree_planning.py  linked_worktree_safety.py  openers.py  repo_paths.py  shell.py  submodule_batch.py  submodule_filters.py  submodule_hooks.py  submodule_worktree_reconcile.py  sync.py
src/just_submodules_hub/run_action/: __init__.py  __main__.py  cli.py  registry.py
src/just_submodules_hub/run_action/actions/: __init__.py  _helpers.py  add_repo.py  cleanup_branches.py  commit_submodule_pointers.py  create_repo.py  every_repo.py  grep.py  init_all_repos.py  install_submodule_hooks.py  linked_worktree_sync.py  linked_worktrees.py  list_github_repos.py  list_managed_repos.py  list_unmanaged_repos.py  open_repo.py  reconcile_worktrees.py  remove_repo.py  submodule_deprecated_aliases.py  submodule_root_status.py  sync_repo_default_branch.py
tests/e2e/: test_real_hub_smoke.py
tests/integration/: conftest.py  helpers.py  test_add_repo.py  test_apply_linked_worktree_sync.py  test_commit_submodule_pointers.py  test_default_branch_baseline_bulk.py  test_default_branch_ruleset.py  test_imported_module_invocation.py  test_init_all_repos.py  test_install_submodule_hooks.py  test_linked_worktree_safety.py  test_linked_worktrees_add_remove.py  test_list_by_file.py  test_list_linked_worktrees.py  test_list_managed_issues.py  test_list_managed_prs.py  test_list_managed_repos.py  test_list_ready_prs.py  test_open_repo.py  test_plan_linked_worktree_sync.py  test_reconcile_submodule_worktrees.py  test_repository_merge_policy.py  test_submodule_every.py  test_submodule_ignore_dirty.py  test_sync_default_branch.py
tests/unit/: test_apply_linked_worktree_sync.py  test_cleanup_merged_branches.py  test_default_branch.py  test_github_cli.py  test_github_issues.py  test_github_prs.py  test_github_rulesets.py  test_gitmodules.py  test_linked_worktree_safety.py  test_list_linked_worktrees.py  test_openers.py  test_plan_linked_worktree_sync.py  test_reconcile_prefilter.py  test_repo_paths.py  test_run_action_actions.py  test_run_action_cli.py  test_run_action_registry.py  test_shell.py  test_submodule_batch.py  test_submodule_filters.py  test_submodule_root_status_actions.py  test_sync_prefilter.py
