[project]
name = "just-submodules-hub"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "tqdm>=4.67.3",
]

[dependency-groups]
dev = [
  "pytest>=8.4.0",
  "pytest-cov>=7.0.0",
]

[tool.pytest.ini_options]
markers = [
    "real_e2e: tests that use real repositories or external state",
]
testpaths = [
    "tests",
]
