[project]
name = "just-submodules-hub"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "tqdm>=4.67.3",
]

[dependency-groups]
dev = [
  "mypy>=2.0.0",
  "pytest>=9.0.3",
  "pytest-cov>=7.0.0",
  "ruff>=0.7.0",
]

[tool.pytest.ini_options]
markers = [
    "real_e2e: tests that use real repositories or external state",
]
testpaths = [
    "tests",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.mypy]
# https://mypy.readthedocs.io/en/latest/config_file.html
ignore_missing_imports = true
disallow_any_decorated = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_unused_ignores = true
warn_return_any = true

[[tool.mypy.overrides]]
# tqdm has no py.typed marker; its contextmanager-decorated generator's type
# contains Any from the untyped tqdm class. Suppress disallow_any_decorated
# for this module until tqdm ships inline type stubs.
module = "just_submodules_hub.submodule_batch"
disallow_any_decorated = false
