[project]
name = "just-submodules-hub"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "tqdm>=4.67.3",
]

[dependency-groups]
dev = [
  "mypy>=2.0.0",
  "pytest>=9.0.3",
  "pytest-cov>=7.0.0",
  "ruff>=0.7.0",
]

[tool.pytest.ini_options]
markers = [
    "real_e2e: tests that use real repositories or external state",
]
testpaths = [
    "tests",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = [
    # Phase A1 (existing)
    "E",        # pycodestyle errors
    "F",        # Pyflakes
    "W",        # pycodestyle warnings
    "I",        # isort (import order)
    "UP",       # pyupgrade (modern Python idioms)
    "B",        # flake8-bugbear
    "C4",       # flake8-comprehensions
    "SIM",      # flake8-simplify
    "RUF",      # Ruff-specific
    "PLC0415",  # import-outside-top-level
    # Phase A2a (new)
    "A",        # flake8-builtins
    "ARG",      # flake8-unused-arguments
    "C90",      # mccabe complexity
    "COM",      # flake8-commas
    "PERF",     # Perflint
    "PLE",      # Pylint Errors
    "PTH",      # flake8-use-pathlib
    "RET",      # flake8-return
    "S",        # flake8-bandit (security)
    "SLOT",     # flake8-slots
    "T20",      # flake8-print
]
ignore = [
    "COM812", # missing-trailing-comma: conflicts with ruff formatter; auto-fixed at Phase A2a
    "E501",   # line-too-long: existing code has many long lines; fix separately
    "UP047",  # non-pep695-generic-function: PEP 695 syntax; defer to Phase A2b
]

[tool.ruff.lint.per-file-ignores]
# Tests: assert is idiomatic (S101); pytest fixture args may be unused (ARG001);
# subprocess in test setup is intentional (S603, S607); /tmp paths in test data
# are not production code (S108); hardcoded token strings in tests are test
# fixtures, not real secrets (S105); lambda stubs for monkeypatch have unused
# args by design (ARG005); try-except-pass is used in negative test assertions
# where pytest.raises is not applicable (S110).
"tests/**" = ["S101", "ARG001", "ARG005", "S603", "S607", "S108", "S105", "S110"]

# Scripts are CLI entrypoints; print() is intentional output (T201). subprocess
# calls are argv-based by design (S603, S607). run_submodule_command.py uses
# shell=True intentionally to support arbitrary user commands (S602).
"scripts/**" = ["T201", "S603", "S607", "S602"]

# Production action modules use stderr-print for diagnostics (T201) and
# argv-based subprocess (S603, S607). These are CLI entrypoints.
"src/just_submodules_hub/run_action/**" = ["T201", "S603", "S607"]

# submodule_batch.py and sync.py are output libraries / CLI main modules;
# print() is the canonical output mechanism for tabular/JSONL records and
# progress messages. Suppressing T201 here is intentional.
"src/just_submodules_hub/submodule_batch.py" = ["T201"]
"src/just_submodules_hub/sync.py" = ["T201"]

# shell.py is the core subprocess wrapper; S603 fires on every subprocess.run
# call even though arguments are always passed as a list (no shell=True).
"src/just_submodules_hub/shell.py" = ["S603"]

[tool.mypy]
# https://mypy.readthedocs.io/en/latest/config_file.html
ignore_missing_imports = true
disallow_any_decorated = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_unused_ignores = true
warn_return_any = true

[[tool.mypy.overrides]]
# tqdm has no py.typed marker; its contextmanager-decorated generator's type
# contains Any from the untyped tqdm class. Suppress disallow_any_decorated
# for this module until tqdm ships inline type stubs.
module = "just_submodules_hub.submodule_batch"
disallow_any_decorated = false
